2011-07-20  Simson Garfinkel  <simsong@cmu-466621.wv.cc.cmu.edu>

	* src/main.cpp (state::md5deep_process_command_line): removed mode_piecewise, since it can be determined from picewise_size>0.

	* src/main.h (class state): moved primary_function into display

2011-07-19  Simson Garfinkel  <simsong@184.sub-75-243-240.myvzw.com>

	* src/main.h (enum): added status_EXIT_FAILURE to status_t as status_t is now returned.

2011-07-19  Simson Garfinkel  <simsong@imac3.home>

	* src/display.cpp: the only place that filename shortening was done was in display_realtime_stats, so all of the filename shortening logic was moved there and it was moved out of display_filename everywhere else. The passage of the FILE * to display to was put back in, becuase display_filename was also being used to display error messages.

2011-07-18  Simson Garfinkel  <simsong@imac3.home>

	* src/main.h (mode_which): changed mode_which to opt_show_matched (which is the default)

2011-07-18  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/display.cpp (display_size): changed mode_csv to opt_csv

2011-07-14  Simson Garfinkel  <simsong@imac3.home>

	* src/common.h: removed STRINGS_CASE_EQUAL.


2011-07-13  Simson Garfinkel  <simsong@imac3.home>

	* src/hash.cpp (hash): successfully removed the state variable from compute_hash.

	* src/display.cpp (display_realtime_stats): moved output of realtime_stats from file_name_annotation to a seperate output, so that display_realtime_stats can now take a const file_data_hasher.

	* src/hash.cpp: changed update_display to display_realtime_stats() and moved to display.cpp

2011-07-10  Simson Garfinkel  <simsong@imac3.home>

	* src/sha1.c: removed copy on all algorithms except sha1; that copy is now done within the sha1 update function, where it should be.
	

	* src/md5.h: all update functions modified to take size_t as the length, becuase you can't pass a size larger than size_t.

2011-07-07  Simson Garfinkel  <simsong@t.nitroba.org>
